--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,7 +27,7 @@ jobs:
           python-version: '3.11.2'
 
       - name: Install Python dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r src/requirements.txt
 
       - name: Run linter (Pylint)
         run: pylint --rcfile src/.pylintrc src
