--- a/src/.pylintrc
+++ b/src/.pylintrc
@@ -421,9 +421,9 @@ confidence=HIGH,
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=C0114, # missing-module-docstring
-        C0115, # missing-class-docstring
-        C0116, # missing-function-docstring
+disable=missing-module-docstring,
+        missing-class-docstring,
+        missing-function-docstring,
         raw-checker-failed,
         bad-inline-option,
         locally-disabled,
