--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,10 @@
 # Docs: https://docs.github.com/en/code-security/dependabot/dependabot-version-updates
 
 version: 2
-
 updates:
   - package-ecosystem: "pip"
     directory: "/src"
     schedule:
       interval: "daily"
-      time: "10:00"
-      timezone: "UTC"
+    assignees:
+      - "MoritzHayden"
