--- a/src/.pylintrc
+++ b/src/.pylintrc
@@ -427,6 +427,7 @@ confidence=HIGH,
 disable=missing-module-docstring,
         missing-class-docstring,
         missing-function-docstring,
+        broad-exception-caught,
         raw-checker-failed,
         bad-inline-option,
         locally-disabled,
