--- a/src/.pylintrc
+++ b/src/.pylintrc
@@ -429,6 +429,7 @@ disable=missing-module-docstring,
         missing-class-docstring,
         missing-function-docstring,
         broad-exception-caught,
+        too-many-arguments,
         raw-checker-failed,
         bad-inline-option,
         locally-disabled,
