--- a/src/.pylintrc
+++ b/src/.pylintrc
@@ -430,6 +430,7 @@ disable=missing-module-docstring,
         missing-function-docstring,
         broad-exception-caught,
         too-many-arguments,
+        too-few-public-methods,
         raw-checker-failed,
         bad-inline-option,
         locally-disabled,
