Update interval from daily to weekly

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,6 @@ updates:
   - package-ecosystem: "pip"
     directory: "/src"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     assignees:
       - "MoritzHayden"
