Use lint.sh script

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -24,10 +24,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11.2'
-
-      - name: Install Python dependencies
-        run: pip install -r src/requirements.txt
+          python-version: "3.11"
 
       - name: Run Pylint
-        run: pylint --rcfile src/.pylintrc src
+        run: scripts/lint.sh
