--- a/src/Pipfile
+++ b/src/Pipfile
@@ -7,11 +7,13 @@ name = "pypi"
 discord-py = "~=2.2"
 emoji = "~=2.2"
 praw = "~=7.7"
+pydantic = "~=1.10"
 python-dotenv = "~=1.0"
 
 [dev-packages]
 pylint = "~=2.17"
 pytest = "~=7.3"
+pytest-mock = "~=3.10"
 
 [requires]
 python_version = "3.11"
