--- a/src/.pylintrc
+++ b/src/.pylintrc
@@ -31,7 +31,7 @@ extension-pkg-allow-list=
 # be loaded. Extensions are loading into the active Python interpreter and may
 # run arbitrary code. (This is an alternative name to extension-pkg-allow-list
 # for backward compatibility.)
-extension-pkg-whitelist=
+extension-pkg-whitelist=pydantic
 
 # Return non-zero exit code if any of these messages/categories are detected,
 # even if score is above --fail-under value. Syntax same as enable. Messages
@@ -190,6 +190,7 @@ good-names=e,
            i,
            j,
            k,
+           id,
            dd,
            edd,
            ex,
@@ -431,6 +432,7 @@ disable=missing-module-docstring,
         broad-exception-caught,
         too-many-arguments,
         too-few-public-methods,
+        redefined-builtin,
         raw-checker-failed,
         bad-inline-option,
         locally-disabled,
