--- a/src/Pipfile
+++ b/src/Pipfile
@@ -8,6 +8,7 @@ discord-py = "~=2.3"
 emoji = "~=2.6"
 pydantic = "~=2.0"
 python-dotenv = "~=1.0"
+requests = "~=2.31"
 
 [dev-packages]
 pylint = "~=2.17"
